added layout changes